--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout1.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout1.css
@@ -10,10 +10,16 @@ body {
 
 aside {
 	background-color: pink;
-	/* TODO: 이 곳을 채우세요! */
+	position : fixed;
+	display : inline-block;
+	width : 200px;
+	height: 100%;
+	overflow:auto;
 }
 
 .main {
 	background-color: skyblue;
-	/* TODO: 이 곳을 채우세요! */
+	width : 100%;
+	height : 100%;
+	overflow: auto;
 }
