--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout2.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout2.css
@@ -10,15 +10,31 @@ body {
 
 .main {
 	background-color: skyblue;
-	/* TODO: 이 곳을 채우세요! */
+	position : absolute;
+	display : inline-block;
+	left:200px;
+	right : 300px;
+	height : 100%;
+	overflow : hidden;
 }
 
 .left {
 	background-color: pink;
-	/* TODO: 이 곳을 채우세요! */
+	position : fixed;
+	display : inline-block;
+	left : 0px;
+	width: 200px;
+	height : 100%;
+	overflow: hidden;
 }
 
 .right {
 	background-color: greenyellow;
-	/* TODO: 이 곳을 채우세요! */
+	position : fixed;
+	display : inline-block;
+	top: 0px;
+	right : 0px;
+	width : 300px;
+	height : 100%;
+	overflow: hidden;
 }
