--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
@@ -1,12 +1,23 @@
+body{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .icon{
+  position : relative;
   width: 100px;
   height: 100px;
   border: 1px dashed black;
-  display: inline-block;
-  margin: 20px;
+  display: block;
 }
 
 .folder{
+  position : relative;
   background-color: limegreen;
   border: 1px solid black;
 }
