Change movPos function of icons(style from relative to absoulte)/details of css

--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
@@ -10,22 +10,23 @@ body{
 
 
 .icon{
-  position : relative;
-  width: 100px;
-  height: 100px;
-  border: 1px dashed black;
+  position : absolute;
+  width: 50px;
+  height: 50px;
   display: block;
+  background-image: url("hyperconnect.png");
+  background-size : cover;
 }
 
 .folder{
-  position : relative;
-  background-color: limegreen;
-  border: 1px solid black;
+  position : absolute;
+  background-image: url("folder.png");
 }
 
 .windo{
   position :absolute;
   display : inline-block;
+  background-color: white;
   width : 500px;
   height : 300px;
   border : 1px solid black;
