--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
@@ -18,15 +18,27 @@ body{
   background-size : cover;
 }
 
+
 .folder{
   position : absolute;
   background-image: url("folder.png");
+}
+
+.hiddenFolder{
+  position : relative;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  background-image: url("finder.jpeg");
+  background-size : cover;
 }
 
 .windo{
   position :absolute;
   display : inline-block;
   background-color: white;
+  top : 50px;
+  left : 300px;
   width : 500px;
   height : 300px;
   border : 1px solid black;
