--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -1,3 +1,49 @@
-* {
-	/* TODO: 필요한 CSS를 채워넣어 보세요! */
+body, html{
+	display : flex;
+	flex-direction : column;
+	position :relative;
+	height : 100%;
+}
+
+.notepad{
+	position: relative;
+	width:100%;
+	height:100%;
+}
+
+ul{
+	list-style-type: none;
+	margin: 0;
+	padding : 0;
+	width: 100%;
+	height : 50px;
+	overflow : hidden;
+	background-color: #333;
+}
+
+li{
+	display : inline-block;
+	color:white;
+	text-align: center;
+	height : 50px;
+	padding: 14px 16px;
+	text-decoration : none;
+}
+
+li:hover{
+	background-color: #111;
+}
+
+.noteArea{
+	position : relative;
+	width:100%;
+	height:90%;
+	overflow:auto;
+}
+
+.note{
+	box-sizing:border-box;
+	font-size : 18px;
+	width: 100%;
+	height : 100%;
 }
