--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -5,32 +5,47 @@ body, html{
 	height : 100%;
 }
 
+ul,li {
+	list-style-type: none;
+	list-style-position:inside;
+  margin:0;
+  padding:0;
+}
+
 .notepad{
 	position: relative;
 	width:100%;
 	height:100%;
 }
 
-ul{
+.navList{
+	display:flex;
 	list-style-type: none;
 	margin: 0;
 	padding : 0;
 	width: 100%;
-	height : 50px;
+	height : 80px;
 	overflow : hidden;
 	background-color: #333;
 }
 
-li{
-	display : inline-block;
-	color:white;
+.navEle{
+	display : flex;
+	flex-direction : row;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
-	height : 50px;
-	padding: 14px 16px;
+	color:white;
+	top:50%;
+	left:50%;
+	width : 80px;
+	height : 40px;
+	padding: 20px 30px;
+	vertical-align: middle;
 	text-decoration : none;
 }
 
-li:hover{
+.navEle:hover{
 	background-color: #111;
 }
 
@@ -46,4 +61,101 @@ li:hover{
 	font-size : 18px;
 	width: 100%;
 	height : 100%;
+	padding : 20px 20px;
+}
+
+#loadwindo{
+	position : absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -200px;
+	margin-top : -150px;
+	width: 400px;
+	height: 300px;
+	border-radius : 5px;
+	background-color : #f2f2f2;
+	padding: 5px;
+	border : 1px solid black;
+}
+
+
+.fileTitle{
+	font : 20px Helvetica;
+	margin : 5px 5px 15px 5px;
+	padding : 5px;
+	border-bottom : 1px solid #ccc;
+}
+
+.loadList{
+	position : relative;
+	list-style : none;
+
+}
+
+.fileEle{
+	display:block;
+	font : 20px sans-serif;
+	border-bottom : 1px solid #ccc;
+	margin : 10px 20px;
+
+}
+
+.fileEle:last-child{
+	border:none;
+}
+
+.message{
+	background-color: #333;
+	border : none;
+	color: white;
+	box-sizing : border-box;
+	text-align : center;
+	width : 100%;
+	padding : 16px 32px;
+	font-size : 20px;
+	text-decoration : none;
+	margin : 5px 2px ;
+}
+
+#saveWindo{
+	position : absolute;
+	top: 50%;
+	left: 50%;
+	margin-left:-150px;
+	margin-top : -75px;
+	width : 300px;
+	height: 150px;
+	border-radius : 5px;
+	background-color : #f2f2f2;
+	padding: 20px;
+	border : 1px solid black;
+}
+
+#fileName{
+	width: 100%;
+	padding : 15px 20px;
+	margin : 20px 0;
+	font-size : 20px;
+	display : inline-block;
+	border : 1px solid #ccc;
+	border-radius : 4px;
+	box-sizing : border-box;
+}
+
+.fileBut{
+	display : flex;
+	flex-direction: row;
+	float : right;
+	position : relative;
+	background-color: #333;
+	border : none;
+	color: white;
+	padding : 16px 32px;
+	font-size : 15px;
+	text-align : center;
+	align-items : center;
+	justify-content : center;
+	text-decoration : none;
+	width: 100px;
+	margin : 1px 3px ;
 }
