Add login/logout function with session/cookie while modifying function of new/load(Quest 12)

--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -29,6 +29,7 @@ ul,li {
 	background-color: #333;
 }
 
+
 .navEle{
 	display : flex;
 	flex-direction : row;
@@ -43,6 +44,10 @@ ul,li {
 	padding: 20px 30px;
 	vertical-align: middle;
 	text-decoration : none;
+}
+
+.navEle:last-child{
+	margin-left : auto;
 }
 
 .navEle:hover{
@@ -158,4 +163,58 @@ ul,li {
 	text-decoration : none;
 	width: 100px;
 	margin : 1px 3px ;
+}
+
+#loginWindo{
+	position : absolute;
+	top: 50%;
+	left: 50%;
+	margin-left:-200px;
+	margin-top : -125px;
+	width : 400px;
+	height: 250px;
+	border-radius : 5px;
+	background-color : #f2f2f2;
+	padding: 20px;
+	border : 1px solid black;
+}
+
+#userID{
+	width: 100%;
+	padding : 15px 20px;
+	margin : 10px 0;
+	font-size : 20px;
+	display : inline-block;
+	border : 1px solid #ccc;
+	border-radius : 4px;
+	box-sizing : border-box;
+}
+
+#userPwd{
+	width: 100%;
+	padding : 15px 20px;
+	margin : 10px 0;
+	font-size : 20px;
+	display : inline-block;
+	border : 1px solid #ccc;
+	border-radius : 4px;
+	box-sizing : border-box;
+}
+
+.loginBut{
+	display : flex;
+	flex-direction: row;
+	float : right;
+	position : relative;
+	background-color: #333;
+	border : none;
+	color: white;
+	padding : 16px 32px;
+	font-size : 15px;
+	text-align : center;
+	align-items : center;
+	justify-content : center;
+	text-decoration : none;
+	width: 100px;
+	margin : 10px 3px ;
 }
