Make rendering pages of Canvas(Quest18)

--- a/Part 5. Modern web/Quest 18. WebSocket/client/canvas.css
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/canvas.css
@@ -55,6 +55,10 @@ ul,li {
   cursor : copy;
 }
 
+.figureButtons:last-child{
+  margin-left: auto;
+}
+
 .figureButtons:hover{
 	background-color: #111;
 }
