--- a/Part 5. Modern web/Quest 18. WebSocket/client/canvas.css
+++ b/Part 5. Modern web/Quest 18. WebSocket/client/canvas.css
@@ -45,6 +45,7 @@ ul,li {
 	align-items: center;
 	text-align: center;
 	color:white;
+  font-size : 15px;
 	top:50%;
 	left:50%;
 	width : 80px;
@@ -87,4 +88,30 @@ ul,li {
 
 svg{
   overflow : visible;
+}
+
+#functionBox{
+  display : flex;
+  flex-direction: column;
+  justify-content: center;
+	align-items: center;
+	text-align: center;
+	position : absolute;
+	top: 80px;
+	right : 0px;
+	background-color: #333;
+	border : 1px solid black;
+}
+
+#functionBox:hover{
+	background-color: #111;
+}
+
+#searchButton, #createButton{
+  color : white;
+  font-size : 15px;
+	width : 140px;
+	height : 80px;
+	background-color: #333;
+  border : 1px solid black;
 }
